# gtkapp

./: .gitignore  README.md  gtkapp.cabal  stack.yaml
script/: post-build
src/: App.hs  Helpers.hs  Main.hs  OSXApp.hs  OtherApp.hs  WindowOptions.hs
